Etape 3 : configuration de la base de données, création du package bddmanager, dal, modele, et création de la documentation technique.

--- a/Mediatek/Mediatek.csproj
+++ b/Mediatek/Mediatek.csproj
@@ -6,12 +6,19 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
     <Folder Include="bddmanager\" />
     <Folder Include="controller\" />
     <Folder Include="model\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="MySql.Data">
+      <HintPath>..\..\..\..\..\..\Program Files (x86)\MySQL\MySQL Connector NET 9.3\MySql.Data.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
